css/style.scss
body {
  display: flex;
  background-color: black;
  color: white;
  height: 100%;
  margin: 0%;
  font-family: "Asap", sans-serif;
  font-weight: 550;
  user-zoom: none;
}

$frame-size: 75px;
@mixin frame($fontSize) {
  display: grid;
  position: fixed;
  left: 0%;
  height: $frame-size;
  width: 100%;
  background-color: #212121;
  align-items: center;
  justify-content: left;

  font-size: $fontSize;
}
header {
  @include frame(25px);
  top: 0%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  box-shadow: 0 3px 10px rgba(24, 24, 24, 0.5);
}
header p {
  width: 100%;
  padding-left: 20px;
}

$button-size: 69px;
.addButton {
  background-color: #bfaae3; 
  width: $button-size;
  height: $button-size;
  border-radius: $button-size/2;
  position: fixed;
  bottom: 9%;
  right: 0%;
  margin: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: black;
  font-size: 40px;
  font-family: "Times new roman";

  box-shadow: 0 5px 15px rgba(24, 24, 24, 0.5);
  user-select: none;
  transition: transform 250ms;

}
.addButton:active{
    transform: scale(0.8);
}

footer {
  @include frame(normal);
  bottom: 0%;
  background-color: black;
  border-top: 1px solid gray;
}

main {
  display: flex;
  flex-direction: column;
  $margins: $frame-size + 4;
  margin-top: $margins;
  margin-bottom: $margins;
  height: 100%;
  width: 100%;
  padding-bottom: 100px;
}

.thing {
  background-color: #4f4f4f;
  margin: 0%;
  padding: 24px;
  border-radius: 10px;
  border-top: 9px solid #CDE9FF;
  margin: 15px;
  margin-bottom: 10px;
}

.themeChanger {
    width: 60px;
    height: 50px;
    background-color: white;
    border-radius: 25px;
    margin-right: 10px;
}

